--- a/WebContent/InserirFilme.html
+++ b/WebContent/InserirFilme.html
@@ -10,7 +10,14 @@
 	<form action="manter_filmes.do" method="POST">
 		<label>Título do Filme: </label><input type="text" name="titulo"/>
 		<label>Descrição: </label><input type="text" name="descricao"/>
+		<label>Popularidade</label><input type="number" name="popularidade"/>
+		<label>Data de Lançamento</label><input type="text" name="datalanc"/>
+		<label>Poster</label><input type="text" name="poster"/>
+		<label>Diretor</label><input type="text" name="diretor"/>
+		<label>Id do Gênero</label><input type="number" name="idgenero"/>
+		
 		<input type="submit" name="acao" value="inserir">
+		
 	</form>
 </body>
 </html>
