--- a/WebContent/InserirFilme.html
+++ b/WebContent/InserirFilme.html
@@ -9,7 +9,7 @@
 	<p> Digite os dados do filme para cadastrar</p>
 	<form action="manter_filmes.do" method="POST">
 		<label>Título do Filme: </label><input type="text" name="titulo"/>
-		<label>Descrição: </label><input type="text" name="descricao"/>
+		<label>Descrição: </label><textarea name="descricao"></textarea>
 		<label>Popularidade</label><input type="number" name="popularidade"/>
 		<label>Data de Lançamento</label><input type="text" name="datalanc"/>
 		<label>Poster</label><input type="text" name="poster"/>
