--- a/WebContent/InserirFilme.html
+++ b/WebContent/InserirFilme.html
@@ -8,13 +8,13 @@
 <h1>Novo Filme</h1>
 	<p> Digite os dados do filme para cadastrar</p>
 	<form action="manter_filmes.do" method="POST">
-		<label>Título do Filme: </label><input type="text" name="titulo"/>
-		<label>Descrição: </label><textarea name="descricao"></textarea>
-		<label>Popularidade</label><input type="number" name="popularidade"/>
-		<label>Data de Lançamento</label><input type="text" name="datalanc"/>
-		<label>Poster</label><input type="text" name="poster"/>
-		<label>Diretor</label><input type="text" name="diretor"/>
-		<label>Id do Gênero</label><input type="number" name="idgenero"/>
+		<label>Título do Filme: </label><input type="text" name="titulo"/><br>
+		<label>Descrição: </label><textarea name="descricao"></textarea><br>
+		<label>Popularidade</label><input type="number" name="popularidade"/><br>
+		<label>Data de Lançamento</label><input type="text" name="datalanc"/><br>
+		<label>Poster</label><input type="text" name="poster"/><br>
+		<label>Diretor</label><input type="text" name="diretor"/><br>
+		<label>Id do Gênero</label><input type="number" name="idgenero"/><br>
 		
 		<input type="submit" name="acao" value="inserir">
 		
